<?xml version="1.0"?>
<package>
  <name>p3dx_control</name>
  <version>0.0.1</version>
  <description>
    The p3dx_control package. This is in experimental mode.
  </description>
  
  <maintainer email="rafael.berkvens@uantwerpen.be">Rafael Berkvens</maintainer>
  <license>GPLv3</license>
  <url>https://github.com/RafBerkvens/ua_ros_p3dx</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
