<?xml version="1.0"?>
<package>
  <name>p3dx_gazebo</name>
  <version>0.1.0</version>
  <description>
    The p3dx_gazebo package. This is a first working version.
  </description>
  
  <maintainer email="davidsegalle@alunos.utfpr.edu.br">David Segalle</maintainer>
  <license>GPLv3</license>
  <url>https://github.com/DavidSegalle/pioneer_p3dx_model_gazebo_ros2</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>


  <build_depend>gazebo_ros</build_depend>
  <build_depend>p3dx_control</build_depend>
  <build_depend>p3dx_description</build_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>